--- a/views/layouts/contact.hbs
+++ b/views/layouts/contact.hbs
@@ -7,14 +7,10 @@
   <link rel="stylesheet" href="/contact.css">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <nav>
-    <div class="logo"><a href="/">VideoCourses</a></div>
-    <ul class="nav-links">
-      <li><a href="/contact">Contact</a></li>
-      <li><a href="/profile">Profile</a></li>
-    </ul>
-  </nav>
+  <!-- Fixed Navbar -->
+  <header>
+     {{>navbar}}
+  </header>
 
   <div class="main-container" style="padding-top: 80px;">
     <!-- Hero Section -->
