--- a/views/layouts/updatePassword.hbs
+++ b/views/layouts/updatePassword.hbs
@@ -4,19 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Profile</title>
-  <link rel="stylesheet" href="profile.css">
+  <link rel="stylesheet" href="/update.css">
 </head>
 <body>
   <div class="main-container">
     <header>
-      <nav>
-        <div class="logo"><a href="/">VideoCourses</a></div>
-        <ul class="nav-links">
-          <li><a href="/home">Home</a></li>
-          <li><a href="/profile" class="active">Profile</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>
-      </nav>
+     {{>navbar}}
     </header>
 
     <main>
