--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -7,7 +7,7 @@
         <a href="/instructor/dashboard">VideoCourses - Instructor</a> <!-- Link for instructors -->
     {{/if}}
     {{else}}
-    <a href="/home">VideoCourses - Guest</a> <!-- Default link for guests -->
+    <a href="/home">VideoCourses - Na</a> <!-- Default link for guests -->
     {{/if}}</div>
     <ul class="nav-links">
     <li><a href="/contact">Contact</a></li>
