--- a/public/contact.css
+++ b/public/contact.css
@@ -65,6 +65,7 @@ nav .nav-links li {
 
 .contact-form .form-group {
   margin-bottom: 15px;
+  padding-right: 20px
 }
 
 .contact-form input[type="text"],
