--- a/public/update.css
+++ b/public/update.css
@@ -28,7 +28,7 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 0px 20px 0px 10px;
   }
   
   header a {
