--- a/public/search.css
+++ b/public/search.css
@@ -370,3 +370,59 @@ html, body {
     }
   }
   
+   /* Basic sidebar styling */
+   .sidebar {
+    width: 250px;
+    position: fixed;
+    left: 0;
+    top: 25;
+    height: 100%;
+    background-color: #f4f4f4;
+    padding-top: 5px;
+    border-right: 1px solid #ddd;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .sidebar h3 {
+    padding-left: 15px;
+    font-size: 1.5em;
+    color: #333;
+  }
+
+  .sidebar a {
+    display: block;
+    padding: 10px 15px;
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+  }
+
+  .sidebar a:hover  {
+    background-color: #ddd;
+  }
+
+  .sidebar a img.icon {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px; /* Adjust as needed */
+  }
+  .sidebar a.active {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  /* Adjusting the content area to accommodate the sidebar */
+  .main-container {
+    margin-left: 250px;  /* Creates space for the sidebar */
+    padding-left: 20px;  /* Adjust for padding */
+  }
+
+  .nav-links {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  /* Styling for main content */
+  .content {
+    padding-left: 20px;
+  }
