--- a/views/layouts/search.hbs
+++ b/views/layouts/search.hbs
@@ -13,23 +13,56 @@
   </style>
 </head>
 <body>
+   <!-- Header (Navbar) -->
   <header>
-    <nav>
-      <div class="logo">VideoCourses</div>
-      <ul class="nav-links">
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/search">Search</a></li>
-      </ul>
-    </nav>
+    {{>navbar}}
   </header>
 
   <div class="main-container">  
-
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <h3>
+        {{#if sessionUser}}
+          {{#if (eq sessionUser.role 'instructor')}}
+            Instructor Dashboard
+          {{else}}
+            Student Dashboard
+          {{/if}}
+        {{else}}
+          Guest Dashboard
+        {{/if}}
+      </h3>
+      <a href="/search" class="active" >
+        <img src="/images/icons/compass.png" alt="My Courses Icon" class="icon"> Browse courses
+      </a>
+      {{#if (eq sessionUser.role 'student')}}
+        <a href="/student/dashboard" >
+        <img src="/images/icons/home.png" alt="My Courses Icon" class="icon"> My Courses
+      </a>
+    {{/if}}
+    {{#if (eq sessionUser.role 'instructor')}}
+        <a href="/instructor/dashboard" class="active">
+        <img src="/images/icons/home.png" alt="My Courses Icon" class="icon"> My Courses
+      </a>
+    {{/if}}
+     
+      {{#if sessionUser}}
+        {{#if (eq sessionUser.role 'instructor')}}
+          <a href="/course-creation">
+            <img src="/images/icons/create.png" alt="Create Course Icon" class="icon"> Create Course
+          </a>
+        {{/if}}
+      {{/if}}
+      <a href="/profile">
+        <img src="/images/icons/profile.png" alt="Profile Icon" class="icon"> Profile
+      </a>
+      <a href="/logout">
+        <img src="/images/icons/logout.png" alt="Logout Icon" class="icon"> Logout
+      </a>
+    </div>
     <!-- Search and Filter Section -->
     <div class="search-container">
-      <form method="GET" action="/search">
+      <form method="POST" action="/search">
         <input type="text" placeholder="Search..." name="query" value="{{query}}">
         <button type="submit" class="search-btn"><img src="/images/search-icon.png" alt="Search"></button>
 
@@ -57,7 +90,7 @@
     
     <!-- Hidden Filter Section -->
     <div id="filter-section" class="filter-section hidden">
-      <form id="filter-form" method="GET" action="/">
+      <form id="filter-form" method="GET" action="/search">
             <label for="category">Filter by Category:</label>
             <select name="category" id="category">
               <option value="">All</option>
